# mc_compound_joint_identification

./: CMakeLists.txt
etc/: CompoundJointIdentification.in.yaml
src/: CMakeLists.txt  CompoundJointIdentification.cpp  CompoundJointIdentification.h  api.h  lib.cpp
src/states/: CMakeLists.txt  CompoundJointIdentification_Initial.cpp  CompoundJointIdentification_Initial.h
